<resources>
    <string name="app_name">ErrekaFit</string>
    <string name="LoginToStart">Inicia sesion para continuar</string>
    <string name="registerToLogin">Ya tienes Cuenta? Logueate!</string>
    <string name="editTextLogin">Login</string>
    <string name="loginButton">Iniciar sesión</string>
    <string name="errekafit">ERREKAFIT</string>
    <string name="workouts">WORKOUTS</string>
    <string name="login">Login</string>
    <string name="noAccountTextView">No tienes cuenta? Registrate!</string>
    <string name="todo">TODO</string>
    <string name="enter_password">Enter Password</string>
    <string name="userLogin">Usuario</string>
    <string name="workoutsInfo">Información de workouts</string>
    <string name="filterHint">Filtrar por nivel</string>
    <string name="filterButton">Filtrar</string>
    <string name="trainerButton">Entrenador</string>
    <string name="userLvl">Nivel de usuario: </string>
    <string name="passLogin">Contraseña</string>
    <string name="enter_user">enter_user</string>
    <string name="loginTextView">Inicio de sesión</string>
    <string name="txt_ok" translatable="false">OK!</string>
    <string name="trainerTitle">ENTRENADOR</string>
    <string name="deleteButton">Eliminar</string>
    <string name="modifyButton">Modificar</string>
    <string name="addButton">Añadir</string>
    <string name="videoButtonTxt" translatable="false">Reproducir video</string>
    <string name="editTextname">Nombre</string>
    <string name="editTextDate">Fecha de Nacimiento</string>
    <string name="editTextTextEmailAddress">Correo</string>
    <string name="editTextSurname">Apellido</string>
    <string name="editTextTextPassword">Contraseña</string>
    <string name="spinner">Tipo de usuario</string>
    <string name="register">REGISTRO</string>
    <string name="NameInputText">Name\n</string>
    <string name="Surname">Surname</string>
    <string name="Mail">Correo</string>
    <string name="birthDate">Fecha de nacimiento</string>
    <string name="User">UserName</string>
    <string name="SwitchThemeChager">Light Mode</string>
    <string name="buttonBack">Volver</string>
    <string name="loadInfo" translatable="false">Cargar informacion</string>
    <string name="changeSpanish">Español</string>
    <string name="changeEnglish">English</string>
    <string name="userName">userName\n</string>
    <string name="changeToProfile">Perfil</string>
    <string name="estrainer">Es entrenador?</string>
    <string name="txt_error_2">No se ha cargado el video</string>
    <string name="txt_error_1">Ha habido un error en la aplicacion</string>
    <string name="txt_intent_web">Elige una de las siguientes apps:</string>
    <string-array name="userType">
       <item>Client</item>
       <item>Trainer</item>
    </string-array>
    <string-array name="Language">
        <item>English</item>
        <item>Español</item>
    </string-array>
    <string-array name="themeMode">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
</resources>