<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteX="-13dp"
    tools:layout_editor_absoluteY="-7dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="177dp"
        android:layout_height="148dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textViewErrekaFitRregistrer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        app:srcCompat="@mipmap/errekafit_foreground"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="214dp"
        android:layout_height="28dp"
        android:text="@string/registerToLogin"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextSurname"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextname"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="214dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/editTextTextEmailAddress"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:hint="@string/spinner"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/editTextDate"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/loginTextname"
        android:layout_width="214dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewErrekaFitRregistrer"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck,HardcodedText,LabelFor" />

    <EditText
        android:id="@+id/editTextname"
        android:layout_width="214dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/editTextname"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextname"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck,HardcodedText,LabelFor" />

    <TextView
        android:id="@+id/textViewErrekaFitRregistrer"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/loginTextname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="214dp"
        android:layout_height="48dp"
        android:text="Registrarse"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextTextPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="552dp" />

</androidx.constraintlayout.widget.ConstraintLayout>